支持tabtoy转表工具 删除lualogin的窗口 修改json解析的方式

--- a/SongofTrojan/Assembly-CSharp.csproj
+++ b/SongofTrojan/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
      <Compile Include="Assets\Script\Core\Audio\AudioManager.cs" />
      <Compile Include="Assets\Script\Core\Config\ConfigManager.cs" />
      <Compile Include="Assets\Script\Core\Config\ConfigTable.cs" />
+     <Compile Include="Assets\Script\Core\Config\TabtoyConfigManager.cs" />
      <Compile Include="Assets\Script\Core\Data\DataGenerateManager.cs" />
      <Compile Include="Assets\Script\Core\Data\DataManager.cs" />
      <Compile Include="Assets\Script\Core\Data\DataTable.cs" />
@@ -199,7 +200,6 @@
      <Compile Include="Assets\Script\UI\LoginWindow\LoginWindow.cs" />
      <None Include="Assets\Script\Core\Editor\res\LuaLib\LuaEventDispatcher.txt" />
      <None Include="Assets\Script\Core\Editor\res\ScriptTemplates\87-C# Script-NewGameStatusScript.cs.txt" />
-     <None Include="Assets\Resources\Lua\UI\LuaLoginWindow.txt" />
      <None Include="Assets\Script\Core\Editor\res\EditorWindow\FindTexture获取.txt" />
      <None Include="Assets\Script\Core\Editor\res\LuaLib\luaJson.txt" />
      <None Include="Assets\Script\Core\Editor\res\EditorWindow\LoadIcon获取.txt" />
@@ -245,7 +245,7 @@
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityHoloLens/RuntimeEditor/UnityEngine.HoloLens.dll</HintPath>
  </Reference>
  <Reference Include="Debugger">
- <HintPath>K:/01 Project/01 Game/11 SongofTrojan/SongofTrojan/Assets/Script/Core/Lua/ToLua/Plugins/Debugger.dll</HintPath>
+ <HintPath>K:/01 Project/01 Game/12 SongofTrojan/SongofTrojan/Assets/Script/Core/Lua/ToLua/Plugins/Debugger.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
