change login to start

--- a/SongofTrojan/Assets/Resources/ResourcesManifest.json
+++ b/SongofTrojan/Assets/Resources/ResourcesManifest.json
@@ -1,35 +1,1 @@
-{
-    "relyBundles": {},
-    "AssetsBundles": {
-        "Config": {
-            "name": "Config",
-            "path": "Config/Config",
-            "relyPackages": "",
-            "md5": ""
-        },
-        "login": {
-            "name": "login",
-            "path": "Image/Login/login",
-            "relyPackages": "",
-            "md5": ""
-        },
-        "LoginWindow": {
-            "name": "LoginWindow",
-            "path": "UI/LoginWindow/LoginWindow",
-            "relyPackages": "",
-            "md5": ""
-        },
-        "UIManager": {
-            "name": "UIManager",
-            "path": "UI/UIManager",
-            "relyPackages": "",
-            "md5": ""
-        },
-        "ResourcesManifest": {
-            "name": "ResourcesManifest",
-            "path": "ResourcesManifest",
-            "relyPackages": "",
-            "md5": ""
-        }
-    }
-}
+{"relyBundles":{},"AssetsBundles":{"Config":{"name":"Config","path":"Config/Config","relyPackages":"","md5":""},"login":{"name":"login","path":"Image/Login/login","relyPackages":"","md5":""},"StartWindow":{"name":"StartWindow","path":"UI/StartWindow/StartWindow","relyPackages":"","md5":""},"UIManager":{"name":"UIManager","path":"UI/UIManager","relyPackages":"","md5":""},"ResourcesManifest":{"name":"ResourcesManifest","path":"ResourcesManifest","relyPackages":"","md5":""}}}
