--- a/SongofTrojan/Assembly-CSharp.csproj
+++ b/SongofTrojan/Assembly-CSharp.csproj
@@ -200,12 +200,14 @@
      <Compile Include="Assets\Script\Core\Utils\SystemInfoTool.cs" />
      <Compile Include="Assets\Script\Core\Utils\UGUITool.cs" />
      <Compile Include="Assets\Script\Game\Logic\LogicMain.cs" />
+     <Compile Include="Assets\Script\Game\Logic\Story\Action\Action_Dialog.cs" />
      <Compile Include="Assets\Script\Game\Logic\Story\Action\ActionBase.cs" />
      <Compile Include="Assets\Script\Game\Logic\Story\Condition\ConditionBase.cs" />
      <Compile Include="Assets\Script\Game\Logic\Story\Story.cs" />
      <Compile Include="Assets\Script\Game\Logic\Story\StoryManager.cs" />
      <Compile Include="Assets\Script\Game\Status\GameStatus.cs" />
      <Compile Include="Assets\Script\Game\Status\StartStatus.cs" />
+     <Compile Include="Assets\Script\Game\UI\DialogWindow\DialogWindow.cs" />
      <Compile Include="Assets\Script\Game\UI\StartWindow\StartWindow.cs" />
      <None Include="Assets\Script\Core\Editor\res\LuaLib\LuaEventDispatcher.txt" />
      <None Include="Assets\Script\Core\Editor\res\ScriptTemplates\87-C# Script-NewGameStatusScript.cs.txt" />
