--- a/SongofTrojan/Assembly-CSharp.csproj
+++ b/SongofTrojan/Assembly-CSharp.csproj
@@ -200,6 +200,7 @@
      <Compile Include="Assets\Script\Core\Utils\SystemInfoTool.cs" />
      <Compile Include="Assets\Script\Core\Utils\UGUITool.cs" />
      <Compile Include="Assets\Script\Game\Logic\LogicMain.cs" />
+     <Compile Include="Assets\Script\Game\Logic\Message\MessageManager.cs" />
      <Compile Include="Assets\Script\Game\Logic\Story\Action\Action_Dialog.cs" />
      <Compile Include="Assets\Script\Game\Logic\Story\Action\ActionBase.cs" />
      <Compile Include="Assets\Script\Game\Logic\Story\Condition\ConditionBase.cs" />
