--- a/SongofTrojan/Assembly-CSharp.csproj
+++ b/SongofTrojan/Assembly-CSharp.csproj
@@ -257,7 +257,7 @@
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityHoloLens/RuntimeEditor/UnityEngine.HoloLens.dll</HintPath>
  </Reference>
  <Reference Include="Debugger">
- <HintPath>E:/work/SongofTrojan/SongofTrojan/Assets/Script/Core/Lua/ToLua/Plugins/Debugger.dll</HintPath>
+ <HintPath>K:/01 Project/01 Game/12 SongofTrojan/SongofTrojan/Assets/Script/Core/Lua/ToLua/Plugins/Debugger.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
