--- a/SongofTrojan/Assembly-CSharp.csproj
+++ b/SongofTrojan/Assembly-CSharp.csproj
@@ -210,7 +210,9 @@
      <Compile Include="Assets\Script\Game\Logic\Story\StoryManager.cs" />
      <Compile Include="Assets\Script\Game\Status\GameStatus.cs" />
      <Compile Include="Assets\Script\Game\Status\StartStatus.cs" />
+     <Compile Include="Assets\Script\Game\UI\BigMapWindow\BigMapWindow.cs" />
      <Compile Include="Assets\Script\Game\UI\DialogWindow\DialogWindow.cs" />
+     <Compile Include="Assets\Script\Game\UI\NormalMapWindow\NormalMapWindow.cs" />
      <Compile Include="Assets\Script\Game\UI\StartWindow\StartWindow.cs" />
      <None Include="Assets\Script\Core\Editor\res\LuaLib\LuaEventDispatcher.txt" />
      <None Include="Assets\Script\Core\Editor\res\ScriptTemplates\87-C# Script-NewGameStatusScript.cs.txt" />
